// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Product Card Must show the component correctly 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Product Card
  </h1>
</div>
`;

exports[`Product Card The counter must increase 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Product Card
  </h1>
  <span>
    0
  </span>
  <button
    onClick={[Function]}
  >
     +1 
  </button>
</div>
`;
